# hdr-converter

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_gui.py  启动.bat
docs/: CHECKPOINT_JPEG_HLG.md  CHECKPOINT_JPEG_PQ.md  CHECKPOINT_PNG.md  CHECKPOINT_PQ.md  EXECUTION_PLAN.md  Gemini说法验证报告.md  HDR增益图生成管线与ProPhoto_RGB.md  ICC_PROFILES.md  MULTI_FORMAT_PLAN.md  PROJECT.md  RTX_VIDEO.md  STATUS.md  UNIFIED_PIPELINE.md
native/rtx_bridge/: CMakeLists.txt  build.ps1
native/rtx_bridge/src/: rtx_bridge.cpp
scripts/: _analyze_lr_uhdr.py  _bench_heif_preset.py  _bench_png_export.py  _benchmark_jpg_export.py  _compare_gamut_icc.py  _compare_mozjpeg.py  _compare_uhdr.py  _diag_gainmap_roundtrip.py  _gen_baseline_only.py  _gen_uhdr_all_gamuts.py  _icc_diff.py  _iso_dump.py  _lr_vs_native_report.txt  _parse_lr_icc.py  _probe_hlg_nclx.py  _probe_jxr_meta.py  _probe_jxr_meta_out.txt  _profile_jpg_export.py  _regress_stage_a.py  _regress_stage_b.py  _regress_stage_c.py  _regress_stage_d.py  _regress_stage_d2.py  _regress_stage_e.py  _regress_stage_g.py  _smoke_icc_policy.py  _smoke_jxl.py  _smoke_jxl_gainmap.py  _sweep_mozjpeg.py  build_exe.ps1  generate_all_icc_assets.py  generate_icc_chrm_fix_test.py  generate_p3_compare.py  generate_p3_icc_ab.py  generate_pq_icc_assets.py  profile_preview_pipeline.py
scripts/_archive/2026-06-saturation-fix/: README.txt
src/hdr_converter/: __init__.py  __main__.py  cli.py  main.py
src/hdr_converter/core/: baseline_icc.py  canonical.py  cicp.py  color_metadata.py  color_pipeline.py  converter.py  decode_cache.py  format_detect.py  gainmap_container_encode.py  gainmap_core.py  gainmap_demux.py  gainmap_math.py  gainmap_pipeline.py  gainmap_tmap.py  hdr_options.py  icc_policy.py  isobmff_gainmap.py  jpeg_encode.py  jpeg_icc.py  jxl_gainmap.py  metadata_bag.py  named_colourspaces.py  parallel.py  passthrough.py  png_optimizer.py  sample_bits.py  scrgb_colour.py  sdr_tonemap.py  source_image.py  transfer_constants.py  transfer_decode.py  uhdr_jpeg_mux.py
src/hdr_converter/core/assets/: __init__.py  apple_baseline_icc.py  display_p3_hlg.icc  display_p3_linear.icc  display_p3_pq.icc  libjxl_pq_icc.py  rec2100_hlg.icc  rec2100_linear.icc  rec2100_pq.icc  srgb_hlg.icc  srgb_linear.icc  srgb_pq.icc
src/hdr_converter/gui/: __init__.py  app.py  format_options_ui.py  hdr_d3d11.py  hdr_preview_window.py  main_window.py  preview_frame.py  preview_panel.py  preview_worker.py  theme.py
(+34 files in other folders)
